--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
       background-size: 200% 200%;
       animation: gradient-animation 15s ease infinite;
     }
+    @keyframes fade-in {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    .animate-fade-in {
+      animation: fade-in 0.5s ease-out forwards;
+    }
   </style>
 <script type="importmap">
 {
